k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-docker-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multi-docker-server
  template:
    metadata:
      labels:
        app: multi-docker-server
    spec:
      containers:
        - name: multi-docker-server
          image: sherondale/multi-docker-server
          ports:
            - containerPort: 5000
